--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,6 +591,144 @@
    ],
    "source": [
     "veri.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kayıp verilerin doldurulması\n",
+    "## Boy ve kilo sütunundaki verileri ait olduğu etkinlikteki verilerin ortalamsına göre dolduracağız\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_event = pd.unique(veri.Event) #her bir etkinliğe ait boy ve kilo ortalamalrını hesaplamak için \n",
+    "#unique fonksiyonunu kullanıyoruz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "765"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(unique_event)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([\"Basketball Men's Basketball\", \"Judo Men's Extra-Lightweight\",\n",
+       "       \"Football Men's Football\", \"Tug-Of-War Men's Tug-Of-War\",\n",
+       "       \"Speed Skating Women's 500 metres\",\n",
+       "       \"Speed Skating Women's 1,000 metres\",\n",
+       "       \"Cross Country Skiing Men's 10 kilometres\",\n",
+       "       \"Cross Country Skiing Men's 50 kilometres\",\n",
+       "       \"Cross Country Skiing Men's 10/15 kilometres Pursuit\",\n",
+       "       \"Cross Country Skiing Men's 4 x 10 kilometres Relay\"], dtype=object)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_event[:10]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "veri_temp = veri.copy() # gerçek verileri saklıyoruz\n",
+    "boy_kilo_liste = [\"Height\", \"Weight\"] # boy ve kilo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ozenm\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 271116 entries, 0 to 271115\n",
+      "Data columns (total 13 columns):\n",
+      "Name       271116 non-null object\n",
+      "Gender     271116 non-null object\n",
+      "Age        261642 non-null float64\n",
+      "Height     271116 non-null float64\n",
+      "Weight     271116 non-null float64\n",
+      "Team       271116 non-null object\n",
+      "NOC        271116 non-null object\n",
+      "Year       271116 non-null int64\n",
+      "Season     271116 non-null object\n",
+      "City       271116 non-null object\n",
+      "Sport      271116 non-null object\n",
+      "Event      271116 non-null object\n",
+      "Madalya    39783 non-null object\n",
+      "dtypes: float64(3), int64(1), object(9)\n",
+      "memory usage: 26.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in unique_event: # etkinlikleri dolaşıyoruz\n",
+    "    event_filter = veri_temp.Event == i # etkinliği yakaladık\n",
+    "    veri_filtreli = veri_temp[event_filter] # o etkinliğe dair her şeyi burada topladık\n",
+    "    for j in boy_kilo_liste:\n",
+    "        avg = np.round(np.mean(veri_filtreli[j]),2)\n",
+    "        if ~np.isnan(avg): # eğer ortalama varsa\n",
+    "            veri_filtreli[j] = veri_filtreli[j].fillna(avg)\n",
+    "        else:\n",
+    "            tum_veri_ortalaması = np.round(np.mean(veri[j]),2)\n",
+    "            veri_filtreli[j] = veri_filtreli[j].fillna(tum_veri_ortalaması)\n",
+    "    veri_temp[event_filter] = veri_filtreli\n",
+    "    \n",
+    "veri = veri_temp.copy()\n",
+    "veri.info()\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
